# 3D_classification

./: CMakeLists.txt  README.md  package.xml
extracted_pcl/: 124960000.pcd  816172000.pcd  845400000.pcd  94856000.pcd  973300000.pcd
extracted_pcl/tower/: 755300000.pcd  929300000.pcd
msg/: bbox.msg  bbox_2d.msg
script/: DepthCamera_2021-07-27-02-02-51.json  detection.ipynb  detection_node.py  detection_test.ipynb  open3d_test.ipynb
src/: convert_svr.cpp  detect_squares.cpp  pathplanner.cpp
world/: car_and_tower.world  mess.sdf  test.sdf  test2.sdf  test_world.sdf
world_to_octomap/: readme.md
